--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
 
   flutter_webrtc: ^0.13.1+hotfix.1
   web_socket_channel: ^3.0.0
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
